test/1.2/errors/T_ENTYPE.dml
/*
  © 2021-2022 Intel Corporation
  SPDX-License-Identifier: MPL-2.0
*/
dml 1.2;
device test;
import "testing.dml";

// bug 12271

header %{
    enum {
        ENUMVAL
    };
%}

extern ENUMVAL;

method init(){
    /// ERROR ENTYPE
    local int x = ENUMVAL;
}
